[gd_scene load_steps=12 format=2]

[ext_resource path="res://source/player/Player.gd" type="Script" id=1]
[ext_resource path="res://graphics/images/spark.png" type="Texture" id=2]
[ext_resource path="res://graphics/images/ships/ship.png" type="Texture" id=3]
[ext_resource path="res://graphics/images/firensmoke/1.png" type="Texture" id=4]
[ext_resource path="res://graphics/images/firensmoke/2.png" type="Texture" id=5]
[ext_resource path="res://graphics/images/firensmoke/3.png" type="Texture" id=6]
[ext_resource path="res://graphics/images/firensmoke/4.png" type="Texture" id=7]
[ext_resource path="res://source/player/turret.wav" type="AudioStream" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 29.8386, 29.9764 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[node name="Player" type="Area2D"]
script = ExtResource( 1 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( 0, -36 )
rotation = 1.5708
emitting = false
amount = 20
lifetime = 0.6
one_shot = true
speed_scale = 2.0
explosiveness = 0.8
local_coords = false
texture = ExtResource( 2 )
flag_align_y = true
spread = 90.0
gravity = Vector2( 0, 160 )
initial_velocity = 600.0
initial_velocity_random = 0.8
scale_amount = 0.5
scale_amount_random = 0.5
color = Color( 0.996078, 0.917647, 0.909804, 1 )
hue_variation = 0.1
hue_variation_random = 0.5

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="BetweenShotsCooldown" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="OverheatCooldown" type="Timer" parent="."]
one_shot = true

[node name="Burners" type="AnimatedSprite" parent="."]
position = Vector2( 0, -10.6201 )
scale = Vector2( 0.5, 0.6 )
frames = SubResource( 3 )
frame = 2
playing = true
offset = Vector2( 0, 400 )

[node name="OverheatShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
[connection signal="timeout" from="BetweenShotsCooldown" to="." method="_on_BetweenShotsCooldown_timeout"]
[connection signal="timeout" from="OverheatCooldown" to="." method="_on_OverheatCooldown_timeout"]
